Working on word wrap issue

--- a/client/src/Message.css
+++ b/client/src/Message.css
@@ -8,7 +8,7 @@ Order of formatting rules:
 */
 
 .Message {
-  max-width: 50%;
+  max-width: 75%;
 }
 
 .Message:first-child {
@@ -40,7 +40,6 @@ Order of formatting rules:
   font-size: 1rem;
   text-align: left;
   white-space: pre-wrap;
-  word-break: break-all;
   overflow-wrap: break-word;
 }
 
